--- a/home/src/main/res/values/dimens.xml
+++ b/home/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <!--discover碎片中，RecommendNewSong对应的Item的宽度比屏幕的宽度小多少，即
     width(item) + 下面的值 = width(screen) -->
     <dimen name="home_discover_recommend_new_song_item_width_smaller_than_screen">50dp</dimen>
+
+    <!--Search界面-->
+    <dimen name="home_search_padding_left">15dp</dimen>
+    <dimen name="home_search_padding_right">15dp</dimen>
 </resources>
