--- a/home/src/main/res/layout/fragment_home_search_content_tab.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_tab.xml
@@ -3,10 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".search.content.SearchContentTabFragment">
     
-    <TextView
+    <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="30dp"
+        app:tabTextColor="#696969"
+        app:tabSelectedTextColor="@color/black"
+        app:tabIndicatorColor="#CD5C5C"
+        app:tabIndicatorFullWidth="false">
+        
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home_search_content_song_tab"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home_search_content_playlist_tab"/>
+        
+    </com.google.android.material.tabs.TabLayout>
 
 </FrameLayout>
