--- a/home/src/main/res/layout/fragment_home_search_content_tab.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_tab.xml
@@ -16,12 +16,12 @@
         
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/home_search_content_song_tab"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/home_search_content_playlist_tab"/>
         
     </com.google.android.material.tabs.TabLayout>
