--- a/home/src/main/res/layout/activity_home_search.xml
+++ b/home/src/main/res/layout/activity_home_search.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".search.SearchActivity"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/home_search_padding_left"
-    android:paddingEnd="@dimen/home_search_padding_right">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingStart="@dimen/home_search_padding_left"
+        android:paddingEnd="@dimen/home_search_padding_right">
 
         <ImageView
             android:layout_width="25dp"
