--- a/musiclibrary/src/main/res/layout/activity_playing_layout.xml
+++ b/musiclibrary/src/main/res/layout/activity_playing_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -12,11 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/music_playing_layout"
-        blurUrl="@{playingItem.al.picUrl}"
-        blurRadius="25"
-        blurSample="1"
-        >
+        android:id="@+id/music_playing_layout">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -170,8 +166,6 @@
 
 
         </RelativeLayout>
-
-
 
 
     </LinearLayout>
