--- a/musiclibrary/src/main/res/layout/fragment_music_playing_image.xml
+++ b/musiclibrary/src/main/res/layout/fragment_music_playing_image.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/playing_image_layout">
 
     <com.topview.purejoy.common.widget.RoundImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/music_playing_round_img"
-        android:layout_gravity="center"/>
+        android:src="@drawable/white_holder"
+        android:layout_centerInParent="true"/>
 
-</LinearLayout>
+</RelativeLayout>
