--- a/musiclibrary/src/main/res/layout/linearlayout_music_notification.xml
+++ b/musiclibrary/src/main/res/layout/linearlayout_music_notification.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:background="@color/cardview_light_background">
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="8dp">
 
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:id="@+id/music_notification_img"
-        android:scaleType="center" />
+        android:scaleType="centerCrop"
+        />
 
     <LinearLayout
         android:layout_width="0dp"
