refactor(home): Rename RecommendNewSong to Song

--- a/home/src/main/res/layout/item_home_recommend_new_song.xml
+++ b/home/src/main/res/layout/item_home_recommend_new_song.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="com.topview.purejoy.home.entity.RecommendNewSong"/>
+        <import type="com.topview.purejoy.home.entity.Song"/>
         <variable
             name="recommendNewSong"
-            type="RecommendNewSong" />
+            type="Song" />
     </data>
 
     <LinearLayout
