--- a/home/src/main/res/layout/fragment_home_search_content_song.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_song.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".search.content.song.SearchContentSongFragment"
-    android:paddingStart="@dimen/home_search_padding_left"
-    android:paddingEnd="@dimen/home_search_padding_right">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <data>
+        <import type="com.topview.purejoy.home.search.content.song.SearchContentSongViewModel"/>
+        <variable
+            name="viewModel"
+            type="SearchContentSongViewModel" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="展示单曲的碎片" />
+        tools:context=".search.content.song.SearchContentSongFragment"
+        android:paddingStart="@dimen/home_search_padding_left"
+        android:paddingEnd="@dimen/home_search_padding_right">
 
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="展示单曲的碎片" />
+
+    </FrameLayout>
+</layout>
