--- a/home/src/main/res/layout/activity_home_search.xml
+++ b/home/src/main/res/layout/activity_home_search.xml
@@ -1,39 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".search.SearchActivity"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:paddingStart="@dimen/home_search_padding_left"
-        android:paddingEnd="@dimen/home_search_padding_right">
+        android:layout_height="match_parent"
+        tools:context=".search.SearchActivity"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/common_ic_back_arror"/>
-        
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/search_view"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            style="@style/Style.Home.SearchView"
-            app:iconifiedByDefault="false"/>
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:paddingStart="@dimen/home_search_padding_left"
+            android:paddingEnd="@dimen/home_search_padding_right">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/common_ic_back_arror" />
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/home_sv_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                style="@style/Style.Home.SearchView"
+                app:iconifiedByDefault="false" />
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/home_fl_fragment_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
 
     </LinearLayout>
-    
-    <FrameLayout
-        android:id="@+id/home_fl_fragment_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    
-    
-</LinearLayout>
+</layout>
