feat(home): SearchContentSongFragment search song according to user's keyword

--- a/home/src/main/res/layout/activity_home_search.xml
+++ b/home/src/main/res/layout/activity_home_search.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <import type="androidx.appcompat.widget.SearchView.OnQueryTextListener"/>
+        <variable
+            name="onQueryTextListener"
+            type="OnQueryTextListener" />
     </data>
 
     <LinearLayout
@@ -32,7 +35,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 style="@style/Style.Home.SearchView"
-                app:iconifiedByDefault="false" />
+                app:iconifiedByDefault="false"
+                app:onQueryTextListener="@{onQueryTextListener}"/>
 
         </LinearLayout>
 
