--- a/home/src/main/res/layout/fragment_home_search_content_tab.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_tab.xml
@@ -38,10 +38,11 @@
 
         </com.google.android.material.tabs.TabLayout>
 
-        <androidx.viewpager2.widget.ViewPager2
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/home_vp_search_content_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:vp2Adapter="@{pagerAdapter}"/>
+            app:adapter="@{pagerAdapter}"/>
 
     </LinearLayout>
 </layout>
