feat(home): Finish the basic function of searching song

--- a/home/src/main/res/layout/fragment_home_search_content_song.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_song.xml
@@ -26,9 +26,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbarSize="@dimen/home_search_content_scrollbar_size"
+            android:scrollbars="vertical"
             app:layoutManager="@{searchContentSongLayoutManager}"
             app:searchSongAdapter="@{searchContentSongAdapter}"
-            app:searchSongs="@{viewModel.searchSongsLiveData}"/>
+            app:searchSongsByFirstRequest="@{viewModel.searchSongsByFirstRequestLiveData}"
+            app:loadMoreSongs="@{viewModel.searchSongsLoadMoreLiveData}"/>
 
     </FrameLayout>
 </layout>
