--- a/home/src/main/res/layout/item_home_daily_recommend_playlist.xml
+++ b/home/src/main/res/layout/item_home_daily_recommend_playlist.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="com.topview.purejoy.home.entity.DailyRecommendPlayList"/>
+        <import type="com.topview.purejoy.home.entity.PlayList"/>
         <variable
             name="dailyRecommendPlayList"
-            type="DailyRecommendPlayList" />
+            type="PlayList" />
     </data>
     
     <LinearLayout
