--- a/musiclibrary/src/main/res/layout/activity_playing_pop_layout.xml
+++ b/musiclibrary/src/main/res/layout/activity_playing_pop_layout.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
-        app:cardCornerRadius="32dp">
+        app:cardCornerRadius="32dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
