refactor(music): modify daily recommend layout

--- a/musiclibrary/src/main/res/layout/layout_music_recommend_item.xml
+++ b/musiclibrary/src/main/res/layout/layout_music_recommend_item.xml
@@ -74,15 +74,18 @@
 
             </LinearLayout>
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/music_daily_recommend_item_more_bt"
-                android:background="@color/white"
-                android:layout_gravity="center_vertical"/>
+
 
 
         </LinearLayout>
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/music_daily_recommend_item_more_bt"
+            android:src="@drawable/music_recommend_more_24"
+            android:layout_gravity="center_vertical"/>
 
 
 
