--- a/musiclibrary/src/main/res/layout/coordinatorlayout_activity_daily_recommend.xml
+++ b/musiclibrary/src/main/res/layout/coordinatorlayout_activity_daily_recommend.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/music_daily_recommend_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.appbar.AppBarLayout
