--- a/home/src/main/res/layout/item_home_search_playlist.xml
+++ b/home/src/main/res/layout/item_home_search_playlist.xml
@@ -24,21 +24,25 @@
        
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="10dp">
             
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="@{playlist.name}"/>
+                android:textColor="#212121"
+                android:text="@{playlist.name}"
+                android:layout_marginBottom="3dp"/>
             
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="@{playlist.songCounts.toString()}"/>
+                android:textSize="11sp"
+                app:playListCountsInfo="@{playlist}"
+                android:layout_marginTop="3dp"/>
             
         </LinearLayout>
         
