--- a/home/src/main/res/layout/fragment_home_search_content_tab.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_tab.xml
@@ -17,6 +17,7 @@
         tools:context=".search.content.SearchContentTabFragment">
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/home_tl_search_tab"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             app:tabTextColor="#696969"
