--- a/home/src/main/res/layout/item_home_recommend_new_song.xml
+++ b/home/src/main/res/layout/item_home_recommend_new_song.xml
@@ -19,7 +19,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:scaleType="centerCrop"
-            app:loadImg="@{recommendNewSong.picUrl}" />
+            app:commonLoadImg="@{recommendNewSong.picUrl}" />
         
         <LinearLayout
             android:layout_width="match_parent"
