--- a/home/src/main/res/layout/item_home_search_playlist.xml
+++ b/home/src/main/res/layout/item_home_search_playlist.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp" 
-            app:loadImg="@{playlist.picUrl}"/>
+            app:commonLoadImg="@{playlist.picUrl}"/>
        
         <LinearLayout
             android:layout_width="match_parent"
