--- a/musiclibrary/src/main/res/layout/music_daily_recommend_pop_layout.xml
+++ b/musiclibrary/src/main/res/layout/music_daily_recommend_pop_layout.xml
@@ -4,8 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="32dp"
-    app:cardElevation="0dp">
+    android:layout_marginHorizontal="16dp"
+    app:cardBackgroundColor="#F1F0F0"
+    app:cardCornerRadius="32dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"
+            android:layout_marginVertical="4dp"
             android:orientation="horizontal"/>
 
         <ScrollView
