--- a/musiclibrary/src/main/res/layout/playlist_square_item.xml
+++ b/musiclibrary/src/main/res/layout/playlist_square_item.xml
@@ -1,37 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginVertical="16dp">
 
-    <data>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="128dp"
+        android:src="@drawable/white_holder"
+        android:scaleType="centerCrop"
+        android:id="@+id/playlist_square_item_iv"
+        android:layout_marginEnd="4dp" />
 
-        <variable
-            name="squarePlaylist"
-            type="com.topview.purejoy.musiclibrary.playlist.entity.Playlist" />
-
-    </data>
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginVertical="16dp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:src="@drawable/white_holder"
-            android:scaleType="centerCrop"
-            android:id="@+id/playlist_square_item_iv"
-            android:layout_marginEnd="4dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:text="@{squarePlaylist.name}"/>
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:id="@+id/playlist_square_item_name_tx"
+        android:text="@string/unknown"/>
 
 
-    </LinearLayout>
-
-</layout>
+</LinearLayout>
