--- a/musiclibrary/src/main/res/layout/music_bottom_bar.xml
+++ b/musiclibrary/src/main/res/layout/music_bottom_bar.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.topview.purejoy.common.widget.compose.RoundedCornerImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/white_holder"
         android:id="@+id/music_bottom_bar_iv"
         android:layout_gravity="center_vertical"
@@ -22,7 +23,6 @@
         android:textColor="@android:color/black"
         android:maxLines="1"
         android:layout_gravity="center_vertical"
-        android:text="@string/unknown"
         android:layout_marginVertical="8dp"
         android:ellipsize="end"/>
 
