--- a/home/src/main/res/layout/activity_home_search.xml
+++ b/home/src/main/res/layout/activity_home_search.xml
@@ -21,8 +21,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:paddingStart="@dimen/home_search_padding_left"
-            android:paddingEnd="@dimen/home_search_padding_right">
+            android:paddingStart="@dimen/home_padding_left"
+            android:paddingEnd="@dimen/home_padding_right">
 
             <ImageView
                 android:layout_width="25dp"
