--- a/home/src/main/res/values/colors.xml
+++ b/home/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     
     <!--搜索相关-->
     <color name="home_search_song_name_color">#6A5ACD</color>
+    
+    <!--"我的"界面-->
+    <color name="home_mine_divider_color">#BEBEBE</color>
 </resources>
