--- a/home/src/main/res/layout/item_home_search_playlist.xml
+++ b/home/src/main/res/layout/item_home_search_playlist.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        android:paddingStart="@dimen/home_padding_left"
-        android:paddingEnd="@dimen/home_padding_right"
+        android:paddingStart="@dimen/common_padding_left"
+        android:paddingEnd="@dimen/common_padding_right"
         android:gravity="center">
 
         <ImageView
