feat(common): Show webview loading progress

--- a/common/src/main/res/layout/activity_common_webview.xml
+++ b/common/src/main/res/layout/activity_common_webview.xml
@@ -9,6 +9,14 @@
 
     <include layout="@layout/webview_title_bar"/>
     
+    <ProgressBar
+        android:id="@+id/common_pb_loading_progress"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:max="100"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:progressDrawable="@drawable/common_bg_progressbar_loading_style"/>
+    
     <WebView
         android:id="@+id/common_wv"
         android:layout_width="match_parent"
