--- a/common/src/main/res/layout/webview_title_bar.xml
+++ b/common/src/main/res/layout/webview_title_bar.xml
@@ -7,7 +7,7 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/common_iv_back_arror"
+        android:id="@+id/common_iv_back_arrow"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:src="@drawable/common_ic_back_arror"
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/common_iv_back_arror"
+        android:layout_toEndOf="@id/common_iv_back_arrow"
         android:singleLine="true"
         android:layout_marginStart="20dp"
         android:textSize="18sp"
