--- a/common/src/main/res/layout/webview_title_bar.xml
+++ b/common/src/main/res/layout/webview_title_bar.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"/>
     
     <TextView
+        android:id="@+id/common_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/common_iv_back_arrow"
@@ -21,7 +22,6 @@
         android:layout_marginStart="20dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#212121"
-        android:text="江湖人生模拟器"/>
+        android:textColor="#212121"/>
     
 </RelativeLayout>
