--- a/musiclibrary/src/main/res/layout/activity_playing_layout.xml
+++ b/musiclibrary/src/main/res/layout/activity_playing_layout.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/music_playing_layout">
+        android:id="@+id/music_playing_layout"
+        android:background="@android:color/darker_gray">
 
 
         <LinearLayout
