--- a/musiclibrary/src/main/res/values/styles.xml
+++ b/musiclibrary/src/main/res/values/styles.xml
@@ -8,6 +8,6 @@
     <style name="slideAnimationActivity" parent="Theme.PureJoy">
         <item name="android:windowAnimationStyle">@style/activitySlideInOutAnimation</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">true</item>
+<!--        <item name="android:windowIsTranslucent">true</item>-->
     </style>
 </resources>
