--- a/home/src/main/res/layout/activity_home_home.xml
+++ b/home/src/main/res/layout/activity_home_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="com.topview.purejoy.home.HomeActivity"/>
+        <import type="com.topview.purejoy.home.main.HomeActivity"/>
         <variable
             name="homeActivity"
             type="HomeActivity" />
